fixed z-index for header

--- a/home.css
+++ b/home.css
@@ -17,7 +17,8 @@ body {
   position: fixed;
   width: 100%;
   top: 0;
-  background-color: var(--ternary-color)
+  background-color: var(--ternary-color);
+  z-index:2;
 }
 
 .logo-title {
